# miyav-pm

./: .gitmodules  Cargo.toml
libnbar-sys/: Cargo.toml  build.rs
libnbar-sys/src/: lib.rs
src/: cli_args.rs  dispatch.rs  lib.rs  main.rs  repo.rs
src/cmds/: clean.rs  extract.rs  install.rs  mod.rs  pack.rs  pkgbuild.rs  publish.rs  purge.rs  remove.rs  search.rs  show.rs  sync.rs  update.rs
src/model/: IndexEntry.rs
